syntax = "proto3";

package cortex.v1;

// Go: server/pb, Rust: build.rs가 자동 처리
option go_package = "./pb";

// =============================================================================
// [Section 1] Identity & User (신원 및 유저 모델)
// =============================================================================

enum AccountType {
  HUMAN = 0;          // 일반 유저 (원형 프사)
  AUTOMATON = 1;      // 봇 (육각형 프사, [BOT] 태그)
  CONSTRUCT = 2;      // 시스템 관리 봇
  PROXY = 3;          // 외부 브릿지 (디스코드 등)
}

message UserProfile {
  string did = 1;         // did:cortex:pubkey...
  string username = 2;    // 표시 이름 (Nero)
  string domain = 3;      // 홈 서버 도메인 (ludus.gg)
  string avatar_url = 4;
  string bio = 5;
  AccountType type = 6;
  bool is_verified = 7;   // 공식 인증 마크
}

// [E2EE] 키 교환용 번들 (서버에 업로드/다운로드)
message KeyBundle {
  string identity_key = 1;       // IK (불변)
  string signed_pre_key = 2;     // SPK (중기)
  bytes spk_signature = 3;       // SPK 서명
  string one_time_key = 4;       // OPK (일회용 - 가져가면 삭제됨)
}

// =============================================================================
// [Section 2] Authentication (인증 - C2S)
// =============================================================================

// 1. 회원가입 요청
message RegisterRequest {
  UserProfile profile = 1;
  bytes signature = 2;    // Sign(profile_bytes, MyPrivateKey)
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  string access_token = 3; // 가입 즉시 로그인 처리용
}

// 2. 로그인 챌린지 (서버가 문제를 냄)
message AuthChallenge {
  string did = 1;
  string nonce = 2;      // 랜덤 문자열 (32 bytes hex)
  int64 expires_at = 3;
}

// 3. 로그인 응답 (클라가 문제를 품)
message AuthLogin {
  string did = 1;
  string nonce = 2;
  bytes signature = 3;   // Sign(nonce, MyPrivateKey)
  string device_name = 4;
}

// 4. 토큰 발급
message TokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}

// =============================================================================
// [Section 3] The Impulse (데이터 전송 컨테이너)
// =============================================================================

// 모든 이벤트는 이 Impulse에 담겨 전송됩니다.
message Impulse {
  // --- 메타데이터 ---
  string id = 1;          // SHA256 Hash
  int64 timestamp = 2;    // Unix Nano
  string sender_did = 3;
  string guild_id = 4;    // (Optional)
  string channel_id = 5;  // (Optional)

  // --- 보안 (Client Signing) ---
  // 서버가 내용을 위조하면 이 서명이 깨집니다.
  bytes signature = 6;

  // --- 내용 (Payload) ---
  oneof payload {
    ChatEvent chat = 10;
    VoiceSignal voice = 11;
    SystemSignal system = 12;
    MigrationCertificate migration = 13;
    AbuseReport report = 14;
  }
}

// =============================================================================
// [Section 4] Chat & E2EE (채팅 및 암호화)
// =============================================================================

message ChatEvent {
  enum RelationType {
    NEW = 0;      // 새 메시지
    REPLY = 1;    // 답장
    EDIT = 2;     // 수정 (덮어쓰기)
    DELETE = 3;   // 삭제 (Tombstone)
  }

  RelationType rel_type = 1;
  string ref_id = 2;      // 대상 메시지 ID (수정/답장 시)
  bool is_encrypted = 3;  // E2EE 여부

  oneof content {
    string plain_text = 4;    // 평문 (공개 채널)
    EncryptedData encrypted = 5; // 암호문 (비공개/DM)
  }

  repeated Attachment attachments = 6;
}

message EncryptedData {
  bytes ciphertext = 1;
  string algorithm = 2;     // "m.megolm.v1.aes-sha2"
  string sender_key_id = 3; // 복호화 세션 키 ID
  string device_id = 4;
}

message Attachment {
  string url = 1;
  string mime_type = 2;
  int64 size = 3;
  string hash = 4;      // 불법 파일 필터링용 해시
  string name = 5;
}

// =============================================================================
// [Section 5] Voice & System (기타 신호)
// =============================================================================

// LiveKit SFU 연결용
message VoiceSignal {
  enum SignalType {
    JOIN_REQUEST = 0;
    TOKEN_ISSUED = 1;
    USER_LEFT = 2;
  }
  SignalType type = 1;
  string sfu_url = 2;  // UDP Direct 주소
  string token = 3;    // JWT Access Token
}

// 서버 생존 신호 (단말마)
message SystemSignal {
  enum SignalType {
    MAINTENANCE = 0;         // 이주 잠금 (Lock)
    SHUTDOWN_PERMANENT = 1;  // 이주 해제 (Unlock)
    MIGRATION_IMMEDIATE = 2; // 즉시 리다이렉트
  }
  SignalType type = 1;
  string message = 2;
  string redirect_url = 3;
  bytes server_signature = 4; // 서버 키 서명
}

// 도메인 변경 증명서
message MigrationCertificate {
  string old_domain = 1;
  string new_domain = 2;
  int64 timestamp = 3;
  bytes signature = 4;    // 구 서버 키 서명
}

// 자정 작용 (신고)
message AbuseReport {
  string reporter_did = 1;
  string target_message_id = 2;
  string reason = 3;
  bytes ephemeral_decryption_key = 4; // 신고용 임시 키
}

// =============================================================================
// [Section 6] Gateway (WebSocket 패킷 구조)
// =============================================================================

message GatewayPayload {
  int32 op = 1;   // OpCode (0: Dispatch, 1: Heartbeat, ...)
  bytes d = 2;    // Data (Impulse 등 실제 데이터)
  string t = 3;   // Type ("MESSAGE_CREATE" 등)
  int64 s = 4;    // Sequence Number
}